2004-06-25  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/arch/alsa/alsa.c: Fix from Marco Ziech <mmz@gmx.net>
        for more correct dlsym error handling.

2004-06-04  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/arch/alsa/alsa.c: Fixes from Marco Ziech
        <mmz@gmx.net>: Fixes for ALSA backend - fix some bugs
        in alsa_blitbuffer, including handling of EPIPE.  Also init ALSA
        in non-blocking mode so that ALSA init can potentially properly fail
        instead of hang if artsd or esd are running.

2004-05-29  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/al_queue.c: Assert fix from
        Erik Hofman <erik@ehofman.com>

2004-05-23  Adam D. Moss  <adam@gimp.org>

	* openal/linux/src/arch/arts/arts.c: ARTS fix from
        Andreas Beckermann <b_mann@gmx.de>

2004-05-21  Adam D. Moss  <adam@gimp.org>

	* openal/linux/src/arch/irix/iris.c: Various IRIX backend
	fixes from Erik Hofman.

2004-05-18  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/arch/irix/iris.c: New IRIX backend from
        Erik Hofman <erik@ehofman.com>, supports 4-channel audio and
        more flexible config.

2004-05-18  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/al_buffer.c: buf->queue_list.size is not the
        same thing as buf->queue_list.items; don't use one when we mean
        the other, or strangeness may occur.

2004-05-18  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/al_queue.c: Plug a memory leak... or at least
        work around it.

2004-02-02  Ryan C. Gordon  <ryan@epicgames.com>

	* openal/linux/configure.in
	* openal/linux/src/arch/alsa/alsa.c
	Optionally use dlopen() on libasound instead of linking directly to it
	in the ALSA driver. Enable this at configure time with:
	   ./configure --enable-alsa --enable-alsa-dlopen

2004-01-29  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>

	* openal/include/AL/altypes.h
	* openal/include/AL/alctypes.h
	Type consolidation, minor number bump